--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@
 # dbuser=root
 # dbpassword=root
 
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/medical
+# spring.datasource.username=root
+# spring.datasource.password=root
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://wcwimj6zu5aaddlj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com/la1axgbielqwopha
 spring.datasource.username=fozs8u8bslwa4qa7
